--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
    <link rel="stylesheet" href="https://unpkg.com/esri-leaflet-geocoder@2.2.9/dist/esri-leaflet-geocoder.css">
    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-   <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <nav>
@@ -34,5 +34,5 @@
      </div>
    </div>
   </body>
-  <script src="dist/bundle.js"></script>
+  <script src="dist/bundle.js" type="text/javascript"></script>
 </html>
