--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,9 +19,11 @@
         <li><a href="#" id="export">Export</a></li>
         <li><a href="#" id="clear">Clear</a><li>
         <li>
+          <form class="" action="/" method="post">
             <div class="input-field">
-                <input placeholder="Minutes" id="minutes" type="number">
+              <input placeholder="Minutes" id="minutes" type="number" name="min">
             </div>
+          </form>
         </form>
         </li>
       </ul>
