add user time elements

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -36,6 +36,12 @@ input#minutes{
   color: white;
 }
 
+input#time{
+  color: white;
+  margin-right: 5px;
+}
+
+
 ::placeholder{
   color: #ffffff;
 }
