--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
       <ul id="nav-mobile" class="right">
         <li><a href="#" id="export">Export</a></li>
         <li><a href="#" id="clear">Clear</a><li>
+        <li><input type="time" id="time"></li>
         <li>
           <form class="" action="/" method="post">
             <div class="input-field">
