add time check, defaults to noon if no time is entered

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
         <li><a href="#" id="clear">Clear</a><li>
         <li><input type="time" id="time"></li>
         <li>
-          <form class="" action="/" method="post">
+          <form>
             <div class="input-field">
               <input placeholder="Minutes" id="minutes" type="number" name="min">
             </div>
