--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
    integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
    crossorigin=""/>
+   <script src="dist/leaflet-heat.js" charset="utf-8"></script>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
    <link rel="stylesheet" href="https://unpkg.com/esri-leaflet-geocoder@2.2.9/dist/esri-leaflet-geocoder.css">
    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
@@ -17,6 +18,7 @@
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">mcg response time coverage</a>
       <ul id="nav-mobile" class="right">
+        <li><input type="file" id="input"></li>
         <li><a href="#" id="export">Export</a></li>
         <li><a href="#" id="clear">Clear</a><li>
         <li><input type="time" id="time"></li>
@@ -38,4 +40,5 @@
    </div>
   </body>
   <script src="dist/bundle.js" type="text/javascript"></script>
+  <script src="dist/leaflet-heat.js" type="text/javascript"></script>
 </html>
