--- a/index.ejs
+++ b/index.ejs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Drive Time App</title>
+     Access-Control-Allow-Origin: http://localhost:8080/
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
     <script src="https://releases.route360.net/r360-js/latest.js"></script>
     <script src="build/js/vendor.min.js"></script>
